Fix issues with creators page (#53)
* Fix issues with creators page

* Update buffer and page size

* Update page size

* Update padding on infinite scroll

* Remove viewport

* Move container class

* Update height of creator container

* Updated creators title

* Fix tags console error

* disable scrollbars

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3375,6 +3375,10 @@ modal-container {
   }
 }
 
+.buy-creator-scroll-container {
+ height: calc(100vh - 235px) !important;
+}
+
 update-profile {
   .update-profile__holder {
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
